updating data cleaning notebook

--- a/Prediciting_Building_Energy_Consumption/notebooks/01_data_clearning.ipynb
+++ b/Prediciting_Building_Energy_Consumption/notebooks/01_data_clearning.ipynb
@@ -67,7 +67,8 @@
     "      * [1.8.1 Merging the data](#1.8.1_Merging_the_data)\n",
     "      * [1.8.2 Energy usage vs. air temperature](#1.8.2_Energy_usage_vs_air_temperature)\n",
     "      * [1.8.3 Use external temperature data to shift time zones](#1.8.3_Use_external_temperature_data_to_shift_time_zones)\n",
-    "  * [1.9 Saving_Processed_Data](#1.9_Saving_Processed_Data)\n"
+    "  * [1.9 Saving_Processed_Data](#1.9_Saving_Processed_Data)\n",
+    "  * [1.10 Summary](#1.10_Summary)"
    ]
   },
   {
@@ -7447,6 +7448,53 @@
    "source": [
     "building_metadata.to_csv('../data/processed/building_metadata_clean.csv')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3561b789",
+   "metadata": {},
+   "source": [
+    "## 1.10 Summary<a id='1.10_Summary'></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "340f88f8",
+   "metadata": {},
+   "source": [
+    "In this notebook I:\n",
+    "\n",
+    "* Identified null values, outliers, and duplicates\n",
+    "* Explored the distribution of the data\n",
+    "* Assessed what data is worth keeping, replacing, or removing\n",
+    "* The time zone of the weather data was shifted to match that of the meter readings\n",
+    "\n",
+    "The main findings were:\n",
+    "\n",
+    "* site id's 8 and 11 are duplicates\n",
+    "* floor_count is missing 75% of the data\n",
+    "* The year_built, and cloud_coverage are missing about 50% of the values.\n",
+    "* precip_depth_1_hr is missing 40% of the values.\n",
+    "* The primary use of most buildings are:\n",
+    "  * education\n",
+    "  * office\n",
+    "  * entertainment/public assembly\n",
+    "  * public services \n",
+    "  * lodging/residential.\n",
+    "* Sites 3 and 13 have the greatest percentages of the buildings.\n",
+    "* all building types have mostly electricity meter readings.\n",
+    "* Warehouse/Storage and Services don't have any chilled water meter readings.\n",
+    "* 'Other', Parking, Warehouse/Storage, Manufacturing/industrial, Retail, Services, Utility, and Religious worship don't have any hot water meter readings\n",
+    "* Retail and Religious worship don't have any steam meter readings."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6196b788",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
