updating preprocessing notebook

--- a/Prediciting_Building_Energy_Consumption/notebooks/03_preprocessing.ipynb
+++ b/Prediciting_Building_Energy_Consumption/notebooks/03_preprocessing.ipynb
@@ -70,44 +70,7 @@
     "The datasets are the following:\n",
     "* meter readings with energy use in kWh per hour for the year 2016. This dataset contains the building ID, the meter type (e.g., chilled water, electricity, steam, and hot water), and the meter reading.\n",
     "* Details about each building. This includes the primary use of the building (e.g., education, office, etc.), number of floors, square footage, year it was built, and a site ID that links to weather data\n",
-    "* Weather data. This includes precipitation, cloud coverage, air temperature, dew temperature, sea level pressure, and wind direction and speed.\n",
-    "\n",
-    "\n",
-    "In the previous notebook I:\n",
-    "\n",
-    "* Plotted the electricity, chilled water, hot water, and steam usage over time and look for trends. We observed:\n",
-    "    * greater electricity use during winter and summer months\n",
-    "    * greater hot water and steam use during winter\n",
-    "    * greater chilled water use during summer   \n",
-    "\n",
-    "\n",
-    "* Larger buildings consume more energy\n",
-    "\n",
-    "\n",
-    "* At warmer temperatures, AC will be used, driving up energy consumption. At colder temperatures, the heater will be used, driving up energy consumption. Accordingly, I observed the following:\n",
-    "  * Higher hot water and steam use during colder temperatures\n",
-    "  * Higher chilled water use during warmer temperatures\n",
-    "  * Higher electricity usage in colder and warmer temperatures\n",
-    "\n",
-    "\n",
-    "* I observed the correlation of sea level pressure and meter readings. We can try to relate sea level pressure to air pressure. Air pressure is higher during winter because colder air is denser. If air pressure is high against the building, air will enter the building, make the building colder, and the building will work more to get warmer. \n",
-    "  * High pressure during winter should lead to higher energy consumption in steam and heat. If air pressure is low against the building, it is warmer outside, warmer air will enter the building, and the building will work more to get cooler. So low pressure during summer should lead to higher energy consumption in chilled water. \n",
-    "\n",
-    "\n",
-    "* higher wind speed will cool the building. this is good in the summer, but bad in the winter. \n",
-    "  * In the summer it helps lower energy consumption\n",
-    "    * Chilled water consumption will decrease with higher wind speed\n",
-    "      * This was generally observed, except for site 2, which has air_temperature similar to Pheonix \n",
-    "  * In the winter it may lead to higher energy consumption\n",
-    "    * Steam and hot water should increase with higher wind speed\n",
-    "      * This was generally observed, except for site 2, which has air_temperature similar to Pheonix \n",
-    "  \n",
-    "\n",
-    "* Precipitation and cloud coverage: Precipitation and cloud coverage will cool a building in the summer which can result in a decrease in energy consumption. During the winter, precipitation will make a building colder, which may lead to an increase in energy consumption.\n",
-    "  * For chilled water, we should see a decrease in energy consumption \n",
-    "     * However, I see the opposite in  a number of sites\n",
-    "  * For hot water and steam, we should see an increase in energy consumption \n",
-    "     * However, this is not necessarily observed"
+    "* Weather data. This includes precipitation, cloud coverage, air temperature, dew temperature, sea level pressure, and wind direction and speed."
    ]
   },
   {
